--- a/PHASE_1/API_SourceCode/functions/package.json
+++ b/PHASE_1/API_SourceCode/functions/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "firebase-admin": "^8.9.2",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
