--- a/PHASE_1/TestScripts/package.json
+++ b/PHASE_1/TestScripts/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
     "jsonschema": "^1.2.5"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
