--- a/PHASE_1/TestScripts/package.json
+++ b/PHASE_1/TestScripts/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "jsonschema": "^1.2.5"
+    "jsonschema": "^1.2.5",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "jest": "^25.1.0"
