--- a/PHASE_2/Application_SourceCode/app/package.json
+++ b/PHASE_2/Application_SourceCode/app/package.json
@@ -14,7 +14,8 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "regression": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
